<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical"


    tools:context="com.example.jamie.lab2b.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/result"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:gravity="end"
            android:hint="@string/calcView"
            android:textSize="20sp"

            />

        <TextView
            android:id="@+id/numberView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/numberView"
            android:textSize="20sp"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/one"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/one"
            android:layout_margin="2dp"
            android:textSize="20sp"
            />

        <Button
            android:id="@+id/two"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/two"
            android:layout_margin="2dp"
            android:textSize="20sp"
            />

        <Button
            android:id="@+id/three"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/three"
            android:layout_margin="2dp"
            android:textSize="20sp"
            />

        <Button
            android:id="@+id/division"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/division"
            android:layout_margin="2dp"
            android:textSize="20sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/four"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/four"
            android:layout_margin="2dp"
            android:textSize="20sp"
            />

        <Button
            android:id="@+id/five"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/five"
            android:layout_margin="2dp"
            android:textSize="20sp"
            />

        <Button
            android:id="@+id/six"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/six"
            android:layout_margin="2dp"
            android:textSize="20sp"
            />

        <Button
            android:id="@+id/multiply"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/multiply"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/seven"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/seven"
            android:layout_margin="2dp"
            android:textSize="20sp"
            />

        <Button
            android:id="@+id/eight"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/eight"
            android:layout_margin="2dp"
            android:textSize="20sp"
            />

        <Button
            android:id="@+id/nine"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/nine"
            android:layout_margin="2dp"
            android:textSize="20sp"
            />

        <Button
            android:id="@+id/subtract"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/subtraction"
            android:layout_margin="2dp"
            android:textSize="20sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/clear"
            android:layout_margin="2dp"
            android:textSize="20sp"
            />

        <Button
            android:id="@+id/zero"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/zero"
            android:textSize="20sp" />

        <Button
            android:id="@+id/equals"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/equals"
            android:layout_margin="2dp"
            android:textSize="20sp"
            />

        <Button
            android:id="@+id/sum"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/plus"
            android:layout_margin="2dp"
            android:textSize="20sp"
            />

    </LinearLayout>

</android.widget.LinearLayout>
